# OpenPost

./: .gitignore  README.md  pyproject.toml
core/: settings.py  urls.py
posts/: admin.py  models.py  urls.py  views.py
posts/migrations/: 0001_initial.py  0002_comment.py
posts/templates/: base.html  login.html  post_detail.html  post_list.html
posts/templates/users/: login.html
templates/: base.html  home.html
templates/account/: login.html
templates/socialaccount/: login.html
templates/users/: login.html
tests/: conftest.py
tests/comments/: test_comments_models.py  test_comments_view.py
tests/posts/: test_posts_models.py  test_posts_views.py
