[project]
name = "openpost"
version = "0.1.0"
description = ""
authors = [
    {name = "Mukarramboy",email = "mukarramboyumarov@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2.5,<6.0.0)",
    "django-quill-editor (>=0.1.42,<0.2.0)",
    "python-decouple (>=3.8,<4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
