[project]
name = "openpost"
version = "0.1.0"
description = ""
authors = [
    {name = "Mukarramboy",email = "mukarramboyumarov@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2.5,<6.0.0)",
    "django-quill-editor (>=0.1.42,<0.2.0)",
    "python-decouple (>=3.8,<4.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "pytest-django (>=4.11.1,<5.0.0)",
    "django-allauth (>=65.11.1,<66.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "cryptography (>=45.0.7,<46.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
